--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@components/*": ["./src/app/shared/components/*"],
       "@enums/*": ["./src/app/shared/enums/*"],
       "@interfaces/*": ["./src/app/shared/interfaces/*"],
-      "@servises/*": ["./src/app/shared/services/*"],
+      "@services/*": ["./src/app/shared/services/*"],
       "@types/*": ["./src/app/shared/types/*"]
     },
     "outDir": "./dist/out-tsc",
