--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@pages/*": ["./src/app/pages/*"],
       "@components/*": ["./src/app/shared/components/*"],
+      "@animations/*": ["./src/app/shared/animations/*"],
       "@enums/*": ["./src/app/shared/enums/*"],
       "@interfaces/*": ["./src/app/shared/interfaces/*"],
       "@services/*": ["./src/app/shared/services/*"],
