feat: modal-overlay close modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@animations/*": ["./src/app/shared/animations/*"],
       "@enums/*": ["./src/app/shared/enums/*"],
       "@interfaces/*": ["./src/app/shared/interfaces/*"],
+      "@models/*": ["./src/app/shared/models/*"],
       "@services/*": ["./src/app/shared/services/*"],
       "@types/*": ["./src/app/shared/types/*"]
     },
