--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@pages/*": ["./src/app/pages/*"],
       "@components/*": ["./src/app/shared/components/*"],
+      "@directives/*": ["./src/app/shared/directives/*"],
       "@animations/*": ["./src/app/shared/animations/*"],
       "@enums/*": ["./src/app/shared/enums/*"],
       "@interfaces/*": ["./src/app/shared/interfaces/*"],
